# MilkMan

./: .gitignore  CMakeLists.txt  README.md  enregistrements.cpp  enregistrements.h  facture.cpp  facture.h  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  server.cpp  server.h  statistiques.cpp  statistiques.h  users.cpp  users.h  ventes.cpp  ventes.h  welcom.cpp  welcom.h
